--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "@ironfly/lru-diskcache",
-    "version": "1.1.2",
+    "name": "@ajayyy/lru-diskcache",
+    "version": "1.1.3",
     "description": "A disk cache object that deletes the least-recently-used items.",
     "author": "Samy Pesse <samypesse@gmail.com>",
     "main": "./lib/index.js",
     "repository": {
         "type": "git",
-        "url": "https://github.com/ironflytech/lru-diskcache.git"
+        "url": "https://github.com/ajayyy/lru-diskcache.git"
     },
     "dependencies": {
         "crc": "^3.4.0",
